--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -375,11 +375,11 @@
     .section-hero .section-inner {
         padding: 10rem 40rem 2rem 0;
     }
-    /* Section Latest news
-        ============================= */
+    /* Section Latest news ============================= */
     .section-latest-news .row{
         flex-direction: row-reverse;
     }
+
     /*** 4. CARD ***/
     
     /* Card (all styles)
