--- a/flexbox/2-styles.css
+++ b/flexbox/2-styles.css
@@ -376,7 +376,8 @@
         padding: 10rem 40rem 2rem 0;
     }
 
-    /* Section Latest news ============================= */
+    /* Section Latest news 
+    ============================= */
 
     .section-latest-news .row {
         flex-direction: row-reverse;
