--- a/flexbox/11-styles.css
+++ b/flexbox/11-styles.css
@@ -537,7 +537,7 @@
     .hero-article .section-inner {
         text-align: center;
         align-items: center;
-        min-height: 40mvh;
+        min-height: 40vh;
     }
 
     .hero-article .section-body {
