--- a/flexbox/13-styles.css
+++ b/flexbox/13-styles.css
@@ -586,7 +586,7 @@
         
     }
 
-    .post-meta-list [class^='post-meta']:last-child {
+    .post-meta-list [class*='post-meta']:last-child {
         border: none;
         margin-bottom: 3rem;
     }
