--- a/flexbox/100-styles.css
+++ b/flexbox/100-styles.css
@@ -616,14 +616,14 @@
         height: auto;
     }
 
-    .post-content p:first-child {
+    .post-content + p {
         font-size: var(--font-size-x-large);
     }
 
     .post-content .img-caption {
         margin: 1rem 0;
         padding: 0 .5rem;
-        font-size: font-size-small;
-        color: #a0a0a0;
+        font-size: var(--font-size-small);
+        color: var(--color-grey);
         text-align: center;
     }
