--- a/flexbox/100-styles.css
+++ b/flexbox/100-styles.css
@@ -629,7 +629,7 @@
     height: auto;
   }
 
-  .post-content + p {
+  .post-content  p:first-child {
     font-size: var(--font-size-x-large);
   }
 
