--- a/form/01-styles.css
+++ b/form/01-styles.css
@@ -656,13 +656,13 @@
         padding-left: 7rem;
     }
 
-    .post-comments section-title {
+    .post-comments .section-title {
         font-variant: small-caps;
     }
 
 /* Basic form
     ============================= */
-    .form {
+    form {
         display: flex;
         flex-direction: column;
         padding: 1rem 0;
