--- a/form/06-styles.css
+++ b/form/06-styles.css
@@ -162,7 +162,7 @@ background: var(--color-primary);
 
   .button-primary:hover {
     color: var(--color-primary);
-    background-color: var(--color-white);
+    background: var(--color-white);
   }
   
   /* Helpers
